...
    <string name="mainmenu_addIncome_button">Dodaj przychód</string>
    <string name="mainmenu_addExpense_button">Dodaj wydatek</string>
    <string name="mainmenu_finMgmt_button">Zarządzanie finansami</string>
    <string name="mainmenu_addReceipt_button">Dodaj paragon</string>
    <string name="mainmenu_addShoppingList_button">Dodaj listę zakupów</string>
...
    <string name="expcat_empty_text">Jak widzisz, nie ma tutaj żadnej kategorii, stwórz ją!</string>
    <string name="expcat_editform_info_edit">Edycja<br /> kategorii wydatków</string>
    <string name="expcat_editform_text_name">Nowa nazwa kategorii wydatków</string>
    <string name="expcat_editform_submit">Zmień nazwę kategorii wydatków</string>
    <string name="expcat_create_info_login">Tworzenie<br /> kategorii wydatków</string>
    <string name="expcat_createform_text_name">Nazwa kategorii wydatków</string>
    <string name="expcat_createform_submit">Utwórz kategorię wydatków</string>
    <string name="expcat_deleteform_info_delete">Usuwanie<br /> kategorii wydatków</string>
    <string name="expcat_deleteform_delete">Czy chcesz usunąć tę kategorię wydatków?</string>
    <string name="expcat_deleteform_submit">Usuń kategorię wydatków</string>
    <string name="expcat_fab_addExpense">Utwórz wydatek</string>
    <string name="expense_expcatList_button">Lista kategorii wydatków</string>
...
    <string name="title_activity_expense_category">Kategorie wydatków</string>
    <string name="trans_empty_text">Jak widzisz, nie ma tutaj żadnej transakcji, dodaj ją!</string>
    <string name="exp_rc_firstLine">Example</string>
    <string name="exp_rc_secondLine">Description</string>
    <string name="inc_rc_secondLine">Description</string>
...
    <string name="finmgmt_budgetmenu_button">Menu budżetów</string>
    <string name="finmgmt_statistics_button">Statystyki</string>
    <string name="finmgmt_transactionsList_button">Transakcje</string>
    <string name="trans_fab_addIncome">Dodaj przychód</string>
    <string name="trans_fab_addExpense">Dodaj wydatek</string>
    <string name="finmgmt_inccat_button">Kategorie przychodów</string>
    <string name="finmgmt_expcat_button">Kategorie wydatków</string>
    <string name="inccat_fab_addIncCat">Utwórz kategorię przychodów</string>
    <string name="expcat_fab_addExpCat">Utwórz kategorię wydatków</string>
    <string name="inccat_empty_text">Jak widzisz, nie ma tutaj żadnej kategorii, stwórz ją!</string>
    <string name="inccat_rc_name">Example</string>
...
    <string name="income_createform_submit">Utwórz przychód</string>
    <string name="income_createform_text_desc">Opis przychodu</string>
    <string name="expense_create_info_login">Tworzenie wydatku</string>
    <string name="expense_createform_text_value">Wartość wydatku</string>
    <string name="expense_createform_text_desc">Opis wydatku</string>
    <string name="expense_createform_submit">Utwórz wydatek</string>
    <string name="title_activity_financeManagement">Zarządzanie finansami</string>
    <string name="title_activity_income_category">Kategorie przychodów</string>
...
    <string name="title_activity_budgettransaction">Lista transakcji w budżecie</string>
    <string name="expense_edit_info_login">Edycja wydatku</string>
    <string name="expense_editform_text_value">Wartość wydatku</string>
    <string name="expense_editform_text_desc">Opis wydatku</string>
    <string name="expense_editform_spin_cat_info">Kategoria:</string>
    <string name="expense_editform_checkbox_budget">Zaliczany do budżetu</string>
    <string name="expense_editform_spin_budget_info">Budżet:</string>
    <string name="expense_editform_submitEdit">Edytuj wydatek</string>
    <string name="expense_deleteform_submitDelete">Usuń wydatek</string>
    <string name="expense_delete_info_login">Usuwanie wydatku</string>
    <string name="expense_deleteform_spin_cat_info">Kategoria:</string>
...
    <string name="schpay_create_transaction_confirmation_info">Czy na pewno<br /> chcesz utworzyć transakcję?</string>
    <string name="schpay_create_transaction_submit">Utwórz transakcję</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="stat_description_info">Dla jakiego okresu chcesz uzyskać dane?</string>
...
    <string name="budget_createbudget_date_error_endDateWhileOtherBudgetIsRunning">Okres rozliczeniowy nie może zakończyć się w trakcie innego okresu rozliczeniowego.</string>
    <string name="budget_createbudget_date_error_otherBudgetIsExistingBetweenStartAndEndDate">Istnieje już okres rozliczeniowy pomiędzy podaną datą rozpoczęcia i zakończenia okresu rozliczeniowego.</string>
    <string name="expcat_createexpcat_name_error_empty">Podaj nazwę kategorii.</string>
    <string name="expcat_createexpcat_name_error_syntax">Nazwa kategorii powinna składać się z co najmniej dwóch liter.</string>
    <string name="expcat_createexpcat_name_error_existing">Istnieje już kategoria z podaną nazwą.</string>
    <string name="schpay_createschpay_date_error_badDate">Płatność musi zostać zaplanowana w dniu późniejszym niż dziś.</string>
    <string name="schpay_createschpay_value_error_empty">Podaj wartość płatności.</string>
    <string name="income_createincome_value_error_empty">Podaj wartość przychodu.</string>
    <string name="expense_createexpense_value_error_empty">Podaj wartość wydatku.</string>
    <string name="receipt_createreceipt_name_error_empty">Podaj nazwę paragonu.</string>
    <string name="receipt_createreceipt_name_error_syntax">Nazwa paragonu powinna składać się z co najmniej dwóch liter.</string>
...
