...
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/mainmenu_settings_button"
            app:layout_constraintBottom_toTopOf="@+id/guideline_hor_095"
            app:layout_constraintEnd_toStartOf="@+id/mainmenu_logout_button"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/guideline_vert_005"
            app:layout_constraintTop_toBottomOf="@+id/mainmenu_shoppingLists_button" />

        <Button
            android:id="@+id/mainmenu_logout_button"
...
