...
            android:textStyle="bold"
            android:text="@string/expense_edit_info_login"
            android:singleLine="true" >
        </TextView>

        <TextView
            android:id="@+id/expense_editform_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="24dp"
            android:layout_below="@+id/expense_editform_info_create"
            android:drawableStart="@drawable/baseline_today_24"
...
            android:layout_centerInParent="true"
            android:layout_below="@+id/expense_editform_spin_budget_info"
            android:layout_margin="20dp"
            android:text="@string/expense_editform_submitEdit" />

        <Button
            android:id="@+id/expense_editform_submitDelete"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/expense_editform_submitEdit"
            android:layout_marginBottom="20dp"
            android:text="@string/expense_deleteform_submitDelete" />
...
